# iot-project

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: 808H5V5.cpp  808H5V5.h  CLed.cpp  CLed.h  CMakeLists.txt  Kconfig.projbuild  adc.cpp  adc.h  main.cpp  mcp9700.cpp  mcp9700.h  mqtt.cpp  mqtt.h  temperature.txt
main/certs/: 5ca6fc193374c762080b76adff4104e543a31987f442224b2cfd5b9de6309b65-public.pem.key  certificate.pem.crt  private.pem.key
